// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render LinkList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Links
    </div>
    <div
      className="show-for-desktop"
    >
      Link
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No links
      </span>
    </div>
  </div>
</div>
`;

exports[`should render LinkList with links 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Links
    </div>
    <div
      className="show-for-desktop"
    >
      Link
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <LinkListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      note=""
    />
    <LinkListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      note=""
    />
    <LinkListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      note=""
    />
  </div>
</div>
`;
